kubernetes/apps/media/base/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 127.0.0.1
        options:
          - name: ndots
            value: "1"
      containers:
        - name: qbittorrent
          image: linuxserver/qbittorrent:5.2.4@sha256:b522f9f4b769f8f36d49d22d5eb6a92e9aa18904c6a1830b1439df511ec21983
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          ports:
            - containerPort: 8080
              name: qbit-web-ui
          resources:
            requests:
              memory: "512Mi"
            limits:
              memory: "2Gi"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
        - name: gluetun
          image: qmcgaw/gluetun:v3.41@sha256:fa19cc76b2af13d57a8d3dc3066f2ada061b1c761b8aecf989b3877c0486e027
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - name: tun
              mountPath: /dev/net/tun
        - name: slskd
          image: slskd/slskd:0.26.0@sha256:ecd4026d4f8fb504e2cc55323efa2c1f5b56d20d3686b018249cc36b48ea17a6
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          ports:
            - containerPort: 5030
              name: http
            - containerPort: 5031
              name: https
            - containerPort: 50300
              name: p2p
          volumeMounts:
            - name: downloads
              mountPath: /app/downloads
              subPath: music
            - name: slskd-app
              mountPath: /app
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: qbit-download
        - name: config
          persistentVolumeClaim:
            claimName: qbit-pvc
        - name: slskd-app
          emptyDir:
            sizeLimit: 1Gi
        - name: tun
          hostPath:
            path: /dev/net/tun
            type: CharDevice
