kubernetes/apps/media/base/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: download-clients
spec:
  selector:
    app: qbittorrent
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: qbittorrent
    - protocol: TCP
      port: 5030
      targetPort: 5030
      name: slskd
