kubernetes/apps/media/base/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: traefik
  rules:
    - host: qbittorrent.homelab.leehosanganson.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: download-clients
                port:
                  number: 8080
    - host: slskd.homelab.leehosanganson.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: download-clients
                port:
                  number: 5030

  tls:
    - hosts:
        - qbittorrent.homelab.leehosanganson.dev
      secretName: qbittorrent-tls
    - hosts:
        - slskd.homelab.leehosanganson.dev
      secretName: slskd-tls
